--- a/persim/nbproject/project.properties
+++ b/persim/nbproject/project.properties
@@ -37,15 +37,15 @@ file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.7.2.jar}:\
-    ${file.reference.sqlite-jdbc-3.7.2-javadoc.jar}:\
+    ${file.reference.calendar-1.2.0-jar-with-dependencies.jar}:\
+    ${file.reference.calendar-1.2.0.jar}:\
+    ${file.reference.framework-1.2.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jgoodies-common-1.2.0.jar}:\
     ${file.reference.jgoodies-looks-2.4.1.jar}:\
     ${file.reference.junit-4.6.jar}:\
-    ${file.reference.calendar-1.2.0-jar-with-dependencies.jar}:\
-    ${file.reference.calendar-1.2.0.jar}:\
-    ${file.reference.framework-1.2.jar}
+    ${file.reference.sqlite-jdbc-3.7.2-javadoc.jar}:\
+    ${file.reference.sqlite-jdbc-3.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
