--- a/persim/nbproject/project.properties
+++ b/persim/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PersonalStudentInfoManager
+application.vendor=Nielsen
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,6 +25,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/PersonalStudentInfoManager.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.calendar-1.2.0-jar-with-dependencies.jar=lib/calendar-1.2.0-jar-with-dependencies.jar
 file.reference.calendar-1.2.0.jar=lib/calendar-1.2.0.jar
@@ -45,7 +47,8 @@ javac.classpath=\
     ${file.reference.jgoodies-looks-2.4.1.jar}:\
     ${file.reference.junit-4.6.jar}:\
     ${file.reference.sqlite-jdbc-3.7.2-javadoc.jar}:\
-    ${file.reference.sqlite-jdbc-3.7.2.jar}
+    ${file.reference.sqlite-jdbc-3.7.2.jar}:\
+    ${reference.PersimFramework.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,6 +77,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.PersimFramework=../PersimFramework
+reference.PersimFramework.jar=${project.PersimFramework}/dist/PersimFramework.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
