--- a/PersimFramework/nbproject/project.properties
+++ b/PersimFramework/nbproject/project.properties
@@ -27,9 +27,29 @@ dist.dir=dist
 dist.jar=${dist.dir}/PersimFramework.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.calendar-1.2.0-jar-with-dependencies.jar=../persim/lib/calendar-1.2.0-jar-with-dependencies.jar
+file.reference.calendar-1.2.0.jar=../persim/lib/calendar-1.2.0.jar
+file.reference.framework-1.2.jar=../persim/lib/framework-1.2.jar
+file.reference.jcalendar-1.4.jar=../persim/lib/jcalendar-1.4.jar
+file.reference.jgoodies-common-1.2.0.jar=../persim/lib/jgoodies-common-1.2.0.jar
+file.reference.jgoodies-looks-2.4.1.jar=../persim/lib/jgoodies-looks-2.4.1.jar
+file.reference.joda-time-2.3.jar=../persim/lib/joda-time-2.3.jar
+file.reference.junit-4.6.jar=../persim/lib/junit-4.6.jar
+file.reference.sqlite-jdbc-3.7.2-javadoc.jar=../persim/lib/sqlite-jdbc-3.7.2-javadoc.jar
+file.reference.sqlite-jdbc-3.7.2.jar=../persim/lib/sqlite-jdbc-3.7.2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.calendar-1.2.0-jar-with-dependencies.jar}:\
+    ${file.reference.calendar-1.2.0.jar}:\
+    ${file.reference.framework-1.2.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jgoodies-common-1.2.0.jar}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar}:\
+    ${file.reference.joda-time-2.3.jar}:\
+    ${file.reference.junit-4.6.jar}:\
+    ${file.reference.sqlite-jdbc-3.7.2-javadoc.jar}:\
+    ${file.reference.sqlite-jdbc-3.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
